Remove tab character.